--- a/level-1/index.html
+++ b/level-1/index.html
@@ -44,7 +44,7 @@
 
                     <header class="content-mid-header"></header>
 
-                    <div class="content"></div>
+                    <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. A dolore officia, magnam eveniet nemo rerum quod consectetur saepe odit? Qui ducimus in, veniam dolorum odit quas et accusamus fugiat voluptate.</div>
 
                 </section>
 
